# g3

./: .gitignore  ACP_IMPLEMENTATION.md  Cargo.toml  DESIGN.md  README.md  TODO  config.example.toml  g3_session_can_you_break_down_the_a567aa48590d5d6f.json  g3_session_hello_test_a63e133911916b31.json  g3_session_list_files_in_this_dir_1ebe2c2bf56072d5.json  requirements.md  retry_analysis.md
crates/g3-acp/: Cargo.toml  README.md
crates/g3-acp/src/: lib.rs
crates/g3-cli/: Cargo.toml
crates/g3-cli/src/: lib.rs  retro_tui.rs  tui.rs  ui_writer_impl.rs
crates/g3-config/: Cargo.toml
crates/g3-config/src/: lib.rs
crates/g3-core/: Cargo.toml
crates/g3-core/src/: error_handling.rs  error_handling_test.rs  lib.rs  project.rs  ui_writer.rs
crates/g3-core/src/providers/: anthropic.rs  embedded.rs  mod.rs  openai.rs
crates/g3-execution/: Cargo.toml
crates/g3-execution/src/: lib.rs
crates/g3-providers/: Cargo.toml
crates/g3-providers/src/: anthropic.rs  databricks.rs  embedded.rs  lib.rs  oauth.rs  retry.rs  retry_wrapper.rs
crates/g3-providers/tests/: centralized_retry_test.rs
src/: main.rs
