[package]
name = "g3-acp"
version = "0.1.0"
edition = "2021"
authors = ["G3 Team"]
description = "Agent Client Protocol (ACP) server implementation for G3"
license = "MIT"

[dependencies]
# G3 core dependencies
g3-core = { path = "../g3-core" }
g3-config = { path = "../g3-config" }
g3-providers = { path = "../g3-providers" }

# ACP protocol
agent-client-protocol = "0.4.2"

# Async runtime and utilities
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["compat", "codec"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
