[package]
name = "g3-providers"
version = "0.1.0"
edition = "2021"
description = "LLM provider abstractions for G3 AI coding agent"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
tokio-stream = "0.1"
